objects/TEACstmrProfile__A_Customer_Profile__c.object
<CustomObject>
    <fields>
        <fullName>TEACstmrProfile__Key_Project_1_Start_Date__c</fullName>
        <inlineHelpText>Expected Start Date or Initial Order Date</inlineHelpText>
        <label>Key Project 1 Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
                <value>
                    <fullName>FY13 Q1</fullName>
                </value>
                <value>
                    <fullName>FY13 Q2</fullName>
                </value>
                <value>
                    <fullName>FY13 Q3</fullName>
                </value>
                <value>
                    <fullName>FY13 Q4</fullName>
                </value>
                <value>
                    <fullName>FY14 Q1</fullName>
                </value>
                <value>
                    <fullName>FY14 Q2</fullName>
                </value>
                <value>
                    <fullName>FY14 Q3</fullName>
                </value>
                <value>
                    <fullName>FY14 Q4</fullName>
                </value>
                <value>
                    <fullName>FY15 Q1</fullName>
                </value>
                <value>
                    <fullName>FY15 Q2</fullName>
                </value>
                <value>
                    <fullName>FY15 Q3</fullName>
                </value>
                <value>
                    <fullName>FY15 Q4</fullName>
                </value>
                <value>
                    <fullName>FY16 Q1</fullName>
                </value>
                <value>
                    <fullName>FY16 Q2</fullName>
                </value>
                <value>
                    <fullName>FY16 Q3</fullName>
                </value>
                <value>
                    <fullName>FY16 Q4</fullName>
                </value>
                <value>
                    <fullName>FY17 Q1</fullName>
                </value>
                <value>
                    <fullName>FY17 Q2</fullName>
                </value>
                <value>
                    <fullName>FY17 Q3</fullName>
                </value>
                <value>
                    <fullName>FY17 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Project_1_Value_M__c</fullName>
        <description>Value of Key Project/Opportunity in Millions</description>
        <inlineHelpText>Value of Key Project/Opportunity in Millions, USD with one decimal place  (ie. $1.5M)</inlineHelpText>
        <label>Key Project 1 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Project_1__c</fullName>
        <inlineHelpText>Key Project/Opportunity description</inlineHelpText>
        <label>Key Project 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Project_2_Start_Date__c</fullName>
        <label>Key Project 2 Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
                <value>
                    <fullName>FY13 Q1</fullName>
                </value>
                <value>
                    <fullName>FY13 Q2</fullName>
                </value>
                <value>
                    <fullName>FY13 Q3</fullName>
                </value>
                <value>
                    <fullName>FY13 Q4</fullName>
                </value>
                <value>
                    <fullName>FY14 Q1</fullName>
                </value>
                <value>
                    <fullName>FY14 Q2</fullName>
                </value>
                <value>
                    <fullName>FY14 Q3</fullName>
                </value>
                <value>
                    <fullName>FY14 Q4</fullName>
                </value>
                <value>
                    <fullName>FY15 Q1</fullName>
                </value>
                <value>
                    <fullName>FY15 Q2</fullName>
                </value>
                <value>
                    <fullName>FY15 Q3</fullName>
                </value>
                <value>
                    <fullName>FY15 Q4</fullName>
                </value>
                <value>
                    <fullName>FY16 Q1</fullName>
                </value>
                <value>
                    <fullName>FY16 Q2</fullName>
                </value>
                <value>
                    <fullName>FY16 Q3</fullName>
                </value>
                <value>
                    <fullName>FY16 Q4</fullName>
                </value>
                <value>
                    <fullName>FY17 Q1</fullName>
                </value>
                <value>
                    <fullName>FY17 Q2</fullName>
                </value>
                <value>
                    <fullName>FY17 Q3</fullName>
                </value>
                <value>
                    <fullName>FY17 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Project_2_Value_M__c</fullName>
        <label>Key Project 2 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Project_2__c</fullName>
        <label>Key Project 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Project_3_Start_Date__c</fullName>
        <label>Key Project 3 Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
                <value>
                    <fullName>FY13 Q1</fullName>
                </value>
                <value>
                    <fullName>FY13 Q2</fullName>
                </value>
                <value>
                    <fullName>FY13 Q3</fullName>
                </value>
                <value>
                    <fullName>FY13 Q4</fullName>
                </value>
                <value>
                    <fullName>FY14 Q1</fullName>
                </value>
                <value>
                    <fullName>FY14 Q2</fullName>
                </value>
                <value>
                    <fullName>FY14 Q3</fullName>
                </value>
                <value>
                    <fullName>FY14 Q4</fullName>
                </value>
                <value>
                    <fullName>FY15 Q1</fullName>
                </value>
                <value>
                    <fullName>FY15 Q2</fullName>
                </value>
                <value>
                    <fullName>FY15 Q3</fullName>
                </value>
                <value>
                    <fullName>FY15 Q4</fullName>
                </value>
                <value>
                    <fullName>FY16 Q1</fullName>
                </value>
                <value>
                    <fullName>FY16 Q2</fullName>
                </value>
                <value>
                    <fullName>FY16 Q3</fullName>
                </value>
                <value>
                    <fullName>FY16 Q4</fullName>
                </value>
                <value>
                    <fullName>FY17 Q1</fullName>
                </value>
                <value>
                    <fullName>FY17 Q2</fullName>
                </value>
                <value>
                    <fullName>FY17 Q3</fullName>
                </value>
                <value>
                    <fullName>FY17 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Project_3_Value_M__c</fullName>
        <label>Key Project 3 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Project_3__c</fullName>
        <label>Key Project 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Market_Share_Plan_Yr_1__c</fullName>
        <formula>IF(ISNULL(TEACstmrProfile__TAM_Plan_Yr_1_M__c), 0, IF(TEACstmrProfile__TAM_Plan_Yr_1_M__c = 0 ,
			0, TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_1_M__c / TEACstmrProfile__TAM_Plan_Yr_1_M__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share Plan Yr+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Market_Share_Plan_Yr_4__c</fullName>
        <formula>IF(ISNULL(TEACstmrProfile__TAM_Plan_Yr_4_M__c), 0, IF(TEACstmrProfile__TAM_Plan_Yr_4_M__c = 0 ,
			0, TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_4_M__c / TEACstmrProfile__TAM_Plan_Yr_4_M__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share Plan Yr+4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Market_Share_Plan_Yr__c</fullName>
        <formula>IF(ISNULL(TEACstmrProfile__TAM_Plan_Year_M__c), 0, IF(TEACstmrProfile__TAM_Plan_Year_M__c = 0 ,
			0, TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_M__c / TEACstmrProfile__TAM_Plan_Year_M__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share Plan Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Market_Share_Prior_Yr__c</fullName>
        <formula>IF(ISNULL(TEACstmrProfile__TAM_Prior_Yr_M__c), 0, IF(TEACstmrProfile__TAM_Prior_Yr_M__c = 0 ,
			0, TEACstmrProfile__TE_Revenue_Prior_Yr_Actual_M__c / TEACstmrProfile__TAM_Prior_Yr_M__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share Prior Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Monthly_Update_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monthly Update Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>A_Customer_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Monthly_Update_Last_Updated__c</fullName>
        <label>Monthly Update Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Monthly_Update__c</fullName>
        <inlineHelpText>Provide a recap of key changes such as won/lost orders or opportunities, milestones achieved on programs, info about the customer (e.g. completed acquisition, financials, etc) and, if nothing has changed, state that.  State essence quickly and concisely.</inlineHelpText>
        <label>Monthly Update</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Obstacle_1__c</fullName>
        <label>Obstacle 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Obstacle_2__c</fullName>
        <label>Obstacle 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Obstacle_3__c</fullName>
        <label>Obstacle 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Plan_Year__c</fullName>
        <label>Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Purchasing_Relationship_Comments__c</fullName>
        <label>Purchasing Relationship Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Purchasing_Relationship__c</fullName>
        <label>Purchasing Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Growing</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Declining</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Big_Win_1_Comments__c</fullName>
        <label>Recent Big Win 1 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Big_Win_1_Date_Won__c</fullName>
        <label>Recent Big Win 1 Date Won</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
                <value>
                    <fullName>FY13 Q1</fullName>
                </value>
                <value>
                    <fullName>FY13 Q2</fullName>
                </value>
                <value>
                    <fullName>FY13 Q3</fullName>
                </value>
                <value>
                    <fullName>FY13 Q4</fullName>
                </value>
                <value>
                    <fullName>FY11 Q4</fullName>
                </value>
                <value>
                    <fullName>FY14 Q1</fullName>
                </value>
                <value>
                    <fullName>FY14 Q2</fullName>
                </value>
                <value>
                    <fullName>FY14 Q3</fullName>
                </value>
                <value>
                    <fullName>FY14 Q4</fullName>
                </value>
                <value>
                    <fullName>FY15 Q1</fullName>
                </value>
                <value>
                    <fullName>FY15 Q2</fullName>
                </value>
                <value>
                    <fullName>FY15 Q3</fullName>
                </value>
                <value>
                    <fullName>FY15 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Big_Win_1_Value_M__c</fullName>
        <inlineHelpText>Recent Big Win Value in Millions, USD, with one decimal place (ie. $1.2M)</inlineHelpText>
        <label>Recent Big Win 1 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Big_Win_1__c</fullName>
        <label>Recent Big Win 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Big_Win_2_Comments__c</fullName>
        <label>Recent Big Win 2 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Big_Win_2_Date_Won__c</fullName>
        <label>Recent Big Win 2 Date Won</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
                <value>
                    <fullName>FY13 Q1</fullName>
                </value>
                <value>
                    <fullName>FY13 Q2</fullName>
                </value>
                <value>
                    <fullName>FY13 Q3</fullName>
                </value>
                <value>
                    <fullName>FY13 Q4</fullName>
                </value>
                <value>
                    <fullName>FY14 Q1</fullName>
                </value>
                <value>
                    <fullName>FY14 Q2</fullName>
                </value>
                <value>
                    <fullName>FY14 Q3</fullName>
                </value>
                <value>
                    <fullName>FY14 Q4</fullName>
                </value>
                <value>
                    <fullName>FY15 Q1</fullName>
                </value>
                <value>
                    <fullName>FY15 Q2</fullName>
                </value>
                <value>
                    <fullName>FY15 Q3</fullName>
                </value>
                <value>
                    <fullName>FY15 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Big_Win_2_Value_M__c</fullName>
        <label>Recent Big Win 2 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Big_Win_2__c</fullName>
        <label>Recent Big Win 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Big_Win_3_Comments__c</fullName>
        <label>Recent Big Win 3 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Big_Win_3_Date_Won__c</fullName>
        <label>Recent Big Win 3 Date Won</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
                <value>
                    <fullName>FY13 Q1</fullName>
                </value>
                <value>
                    <fullName>FY13 Q2</fullName>
                </value>
                <value>
                    <fullName>FY13 Q3</fullName>
                </value>
                <value>
                    <fullName>FY13 Q4</fullName>
                </value>
                <value>
                    <fullName>FY11 Q4</fullName>
                </value>
                <value>
                    <fullName>FY14 Q1</fullName>
                </value>
                <value>
                    <fullName>FY14 Q2</fullName>
                </value>
                <value>
                    <fullName>FY14 Q3</fullName>
                </value>
                <value>
                    <fullName>FY14 Q4</fullName>
                </value>
                <value>
                    <fullName>FY15 Q1</fullName>
                </value>
                <value>
                    <fullName>FY15 Q2</fullName>
                </value>
                <value>
                    <fullName>FY15 Q3</fullName>
                </value>
                <value>
                    <fullName>FY15 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Big_Win_3_Value_M__c</fullName>
        <label>Recent Big Win 3 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Big_Win_3__c</fullName>
        <label>Recent Big Win 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Loss_1_Comments__c</fullName>
        <label>Recent Loss 1 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Loss_1_Date__c</fullName>
        <label>Recent Loss 1 Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
                <value>
                    <fullName>FY13 Q1</fullName>
                </value>
                <value>
                    <fullName>FY13 Q2</fullName>
                </value>
                <value>
                    <fullName>FY13 Q3</fullName>
                </value>
                <value>
                    <fullName>FY13 Q4</fullName>
                </value>
                <value>
                    <fullName>FY14 Q1</fullName>
                </value>
                <value>
                    <fullName>FY14 Q2</fullName>
                </value>
                <value>
                    <fullName>FY14 Q3</fullName>
                </value>
                <value>
                    <fullName>FY14 Q4</fullName>
                </value>
                <value>
                    <fullName>FY15 Q1</fullName>
                </value>
                <value>
                    <fullName>FY15 Q2</fullName>
                </value>
                <value>
                    <fullName>FY15 Q3</fullName>
                </value>
                <value>
                    <fullName>FY15 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Loss_1_Value_M__c</fullName>
        <inlineHelpText>Recent Loss Value in Millions, USD, with one decimal place (ie. $1.2M)</inlineHelpText>
        <label>Recent Loss 1 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Loss_1__c</fullName>
        <label>Recent Loss 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Loss_2_Comments__c</fullName>
        <label>Recent Loss 2 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Loss_2_Date__c</fullName>
        <label>Recent Loss 2 Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
                <value>
                    <fullName>FY13 Q1</fullName>
                </value>
                <value>
                    <fullName>FY13 Q2</fullName>
                </value>
                <value>
                    <fullName>FY13 Q3</fullName>
                </value>
                <value>
                    <fullName>FY13 Q4</fullName>
                </value>
                <value>
                    <fullName>FY14 Q1</fullName>
                </value>
                <value>
                    <fullName>FY14 Q2</fullName>
                </value>
                <value>
                    <fullName>FY14 Q3</fullName>
                </value>
                <value>
                    <fullName>FY14 Q4</fullName>
                </value>
                <value>
                    <fullName>FY15 Q1</fullName>
                </value>
                <value>
                    <fullName>FY15 Q2</fullName>
                </value>
                <value>
                    <fullName>FY15 Q3</fullName>
                </value>
                <value>
                    <fullName>FY15 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Loss_2_Value_M__c</fullName>
        <label>Recent Loss 2 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Loss_2__c</fullName>
        <label>Recent Loss 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Loss_3_Comments__c</fullName>
        <label>Recent Loss 3 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Loss_3_Date__c</fullName>
        <label>Recent Loss 3 Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
                <value>
                    <fullName>FY13 Q1</fullName>
                </value>
                <value>
                    <fullName>FY13 Q2</fullName>
                </value>
                <value>
                    <fullName>FY13 Q3</fullName>
                </value>
                <value>
                    <fullName>FY13 Q4</fullName>
                </value>
                <value>
                    <fullName>FY14 Q1</fullName>
                </value>
                <value>
                    <fullName>FY14 Q2</fullName>
                </value>
                <value>
                    <fullName>FY14 Q3</fullName>
                </value>
                <value>
                    <fullName>FY14 Q4</fullName>
                </value>
                <value>
                    <fullName>FY15 Q1</fullName>
                </value>
                <value>
                    <fullName>FY15 Q2</fullName>
                </value>
                <value>
                    <fullName>FY15 Q3</fullName>
                </value>
                <value>
                    <fullName>FY15 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Loss_3_Value_M__c</fullName>
        <label>Recent Loss 3 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Recent_Loss_3__c</fullName>
        <label>Recent Loss 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Revenue_Section_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Section Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>A_Customer_Profiles_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Revenue_Section_Last_Updated__c</fullName>
        <label>Revenue Section Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Revenue_TAM_SAM__c</fullName>
        <inlineHelpText>Indicate whether you will be supplying figures for TAM or for SAM.</inlineHelpText>
        <label>Revenue TAM/SAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TAM</fullName>
                </value>
                <value>
                    <fullName>SAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Sales_Breakdown_1_Description__c</fullName>
        <inlineHelpText>Description of the categories in which you are breaking down the sales for this customer.  Categories may be regions, countries, locations, competitors, etc.  
This information will be presented in a pie chart.</inlineHelpText>
        <label>Sales Breakdown 1</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Sales_Breakdown_1_Percent__c</fullName>
        <inlineHelpText>Sales Breakdown Percent for this category.</inlineHelpText>
        <label>Sales Breakdown 1 Percent</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Sales_Breakdown_2_Description__c</fullName>
        <label>Sales Breakdown 2</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Sales_Breakdown_2_Percent__c</fullName>
        <label>Sales Breakdown 2 Percent</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Sales_Breakdown_3_Description__c</fullName>
        <label>Sales Breakdown 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Sales_Breakdown_3_Percent__c</fullName>
        <label>Sales Breakdown 3 Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Sales_Figures_Makeup__c</fullName>
        <label>TE Sales Figures Makeup</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                    <default>true</default>
                    <label>Direct</label>
                </value>
                <value>
                    <fullName>Indirect - Distribution</fullName>
                </value>
                <value>
                    <fullName>Indirect - Contract Mfr Alloc&apos;s</fullName>
                </value>
                <value>
                    <fullName>Indirect - 3-tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Strategic_Initiative_10_Status__c</fullName>
        <label>Strategic Initiative 10 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On target</fullName>
                </value>
                <value>
                    <fullName>In process with delays possible</fullName>
                </value>
                <value>
                    <fullName>Not on target</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>